--- a/src/pages/Admin/components/PopUp/Calendar.scss
+++ b/src/pages/Admin/components/PopUp/Calendar.scss
@@ -129,15 +129,12 @@
   color: #fff;
   border-radius: 5px 5px 0px 0px;
 }
-
 .cv-weeks {
   background-color: #efefef;
   height: 460px;
 }
-
 .cv-header-days,
 // .cv-header-day,
-
 .cv-week,
 .cv-day,
 .cv-item {
@@ -217,14 +214,15 @@
   font-weight: 700;
 }
 .cv-header .periodLabel {
-  // display: flex;
-  // // flex: 1 1 auto;
-  // flex-flow: row nowrap;
-  // min-height: 1.5em;
-  // line-height: 1;
-  // font-size: 1.3em;
-  // font-weight: 700;
-  display: none;
+  display: flex;
+  justify-content: center;
+  flex: 1 1 auto;
+  flex-flow: row nowrap;
+  min-height: 1.5em;
+  line-height: 1;
+  font-size: 1.3em;
+  font-weight: 700;
+  // display: none;
 }
 .cv-header,
 .cv-header button {
@@ -232,7 +230,9 @@
   border-color: #ddd;
   font-weight: 900;
 }
-// .cv-header-nav,
+.cv-header-nav {
+  margin-left: 50px;
+}
 // .cv-header .periodLabel {
 //   margin: 0.1em 0.6em;
 // }
@@ -249,15 +249,12 @@
   font-size: 1em;
   border-width: 1px;
 }
-
 .today {
   color: #599cff;
 }
-
 .dow6 {
   border-right: none;
 }
-
 .outsideOfMonth {
   color: #999999;
   font-weight: 100;
