--- a/src/pages/Admin/components/PopUp/Calendar.scss
+++ b/src/pages/Admin/components/PopUp/Calendar.scss
@@ -112,13 +112,19 @@
   user-select: none;
 }
 .cv-item {
+  margin-top: 10px;
+  text-align: center;
   position: absolute;
   white-space: nowrap;
   overflow: hidden;
-  background-color: #f7f7f7;
+  background-color: #ffc2a5;
   border-width: 1px;
   direction: initial;
+  border-style: solid;
+  border-color: #ffc2a5;
+  color: black;
 }
+
 .cv-wrapper.wrap-item-title-on-hover .cv-item:hover {
   white-space: normal;
   z-index: 1;
@@ -136,11 +142,11 @@
 .cv-header-days,
 // .cv-header-day,
 .cv-week,
-.cv-day,
-.cv-item {
+.cv-day {
   border-style: solid;
   border-color: #c7c7c7;
 }
+
 .cv-item .endTime:before {
   content: "-";
 }
