add: internship contact/admin page

--- a/src/pages/Admin/components/PopUp/Calendar.scss
+++ b/src/pages/Admin/components/PopUp/Calendar.scss
@@ -117,12 +117,14 @@
   position: absolute;
   white-space: nowrap;
   overflow: hidden;
-  background-color: #ffc2a5;
+  background-color: #ffe0d2;
   border-width: 1px;
   direction: initial;
   border-style: solid;
   border-color: #ffc2a5;
   color: black;
+  border-radius: 4px;
+  margin-left: 0.5px;
 }
 
 .cv-wrapper.wrap-item-title-on-hover .cv-item:hover {
